--- a/templates/trip/new.html.twig
+++ b/templates/trip/new.html.twig
@@ -2,49 +2,63 @@
 
 {% block body %}
     <div class="container">
-        <div class="form_container">
-            <h2>{{ timeTable.band.name }}</h2>
-            <h2>{{ timeTable.weekStartDate | date('d/m/y') }}
+        <div class="card_container">
+            <h2 class="titulo">{{ timeTable.band.name }}</h2>
+            <h2 class="titulo">{{ timeTable.weekStartDate | date('d/m/y') }}
                 -{{ (timeTable.weekStartDate | date_modify('+4 days')) | date('d/m/y') }}</h2>
             {% set weekdays = {1: 'Lunes', 2: 'Martes', 3: 'Miércoles', 4: 'Jueves', 5: 'Viernes'} %}
-            <table>
-                <thead>
-                <tr>
-                    {% for i in 1..5 %}
-                        <th colspan="4">{{ weekdays[i] }}</th>
-                    {% endfor %}
-                </tr>
-                </thead>
-                <tbody>
-                {% set hourIntervals = {
-                    1: '8:15 - 9:15',
-                    2: '9:15 - 10:15',
-                    3: '10:15 - 11:15',
-                    4: '11:45 - 12:45',
-                    5: '12:45 - 13:45',
-                    6: '13:45 - 14:45'
-                } %}
-                <tr>
-                    {% for trip in trips %}
-                        {% if trip.entrySlot == 0 or trip.exitSlot == 0 %}
-                            <td colspan="4">{{ trip.tripDate | date('d-m-Y') }} - Día festivo</td>
-                        {% else %}
-                            <td>{{ hourIntervals[trip.entrySlot] }}</td>
-                            <td>{{ hourIntervals[trip.exitSlot] }}</td>
-                            <td>{{ trip.driver }}</td>
-                            <td>
-                            {% if trip.driver == app.user.driver and trip.isActive %}
-                                <a href="{{ path('confirm_trip', {'id':trip.id}) }}" class="primaryButton">Hecho<i class="ti ti-check"></i></a>
-                            {% else %}
-                                <a href="{{ path('confirm_trip', {'id':trip.id}) }}" class="primaryButton disabled" aria-disabled="true">Hecho<i class="ti ti-check"></i></a>
-                            {% endif %}
-                            </td>
-                        {% endif %}
-                    {% endfor %}
-                </tr>
-
-                </tbody>
-            </table>
+            {% set hourIntervals = {
+                1: '8:15 - 9:15',
+                2: '9:15 - 10:15',
+                3: '10:15 - 11:15',
+                4: '11:45 - 12:45',
+                5: '12:45 - 13:45',
+                6: '13:45 - 14:45'
+            } %}
+            {% for trip in trips %}
+                <div class="expandable-container">
+                    <div class="expandable">
+                        <span class="title">{{ weekdays[loop.index] }}</span>
+                        <div class="icons">
+                            <a href="#" class="btn edit">
+                                <i class="ti ti-edit" style="font-size: 1.5rem"></i>
+                            </a>
+                            <span class="icon"><i class="ti ti-caret-down-filled" style="font-size: 1.5rem"></i></span>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <div class="card-grid">
+                            <div class="expanded_card">
+                                <p class="label">Fecha:</p>
+                                <p class="value">{{ trip.tripDate | date('d-m-Y') }}</p>
+                            </div>
+                            <div class="expanded_card">
+                                <p class="label">Hora de entrada:</p>
+                                <p class="value">{{ trip.entrySlot }}</p>
+                            </div>
+                            <div class="expanded_card">
+                                <p class="label">Hora de salida:</p>
+                                <p class="value">{{ trip.exitSlot }}</p>
+                            </div>
+                            <div class="expanded_card">
+                                <p class="label">Conductor:</p>
+                                <p class="value">{{ trip.driver }}</p>
+                            </div>
+                            <div class="expanded_card">
+                                <p class="label">Pasajeros:</p>
+                                <p class="value">{{ trip.driver }}</p>
+                            </div>
+                            <div class="expanded_card">
+                                {% if trip.driver == app.user.driver and trip.isActive %}
+                                    <a href="{{ path('confirm_trip', {'id':trip.id}) }}" class="primaryButton">Hecho<i class="ti ti-check"></i></a>
+                                {% else %}
+                                    <a href="{{ path('confirm_trip', {'id':trip.id}) }}" class="primaryButton disabled" aria-disabled="true">Hecho<i class="ti ti-check"></i></a>
+                                {% endif %}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
         </div>
         <div class="button_container">
             <a href="{{ path('timetable_main', {'id':group.id}) }}" class="secondaryButton"><i
